Feature: add sessions
